Making sure the stop name doesn't overlap alerts

--- a/css/main.css
+++ b/css/main.css
@@ -77,9 +77,9 @@ h2 {
 
   h1 {
     font-size: 2em;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px auto;
     text-align: center;
+    width: 75%;
   }
 
   h1.title {
